assets/opstools/FCFCore/opsportal-theme-fcf.css
/* ... */
.off-botm50 {margin-bottom:50px;}

.off-botm8 {margin-bottom:8px;}

.padtop20 {padding-top: 20px;}

.padtop2 {padding-top: 2px;}

.padtop10 {padding-top: 10px;}

.padtop15 {padding-top: 15px !important;}

.padtop40 {padding-top:40px}

.padleft5 {padding-left:5px;}

.padleft10 {padding-left:10px;}

.padleft15 {padding-left:15px;}

.padleft20 {padding-left:20px;}

.padR5 {padding-right:5px;}

.padR10 {padding-right:10px;}

.padR15 {padding-right:15px;}

.padR20 {padding-right:20px;}

.padbot15 { padding-bottom:15px !important;}

.padbot10 { padding-bottom:10px !important;}

.padbot55 { padding-bottom:55px !important;}

.padding10 {padding:10px}

.nopadBotm {padding-bottom:0;}

.nopadLR {padding-left:0 !important;padding-right:0 !important;}

.nopadR {padding-right:0}

.nopadL {padding-left:0}

.center {text-align:center}

.align-r { text-align: right; }

.align-l { text-align: left; }

.orange {color:#ef6316;}

.blue {color:#433DB3;}

.bgfont {font-size:14px;}

.font16 {font-size:16px;}

.font25 {font-size:20px;}

.fcf-blue-wrap {
	background-color:#1f6b8d;
	padding: 10px 15px;
	-webkit-border-radius: 20px;
	-webkit-border-top-right-radius: 0;
	-moz-border-radius: 20px;
	-moz-border-radius-topright: 0;
	border-radius: 20px;
	border-top-right-radius: 0;
	-webkit-box-shadow: 10px 10px 11px 1px rgba(0,0,0,0.3);
	-moz-box-shadow: 10px 10px 11px 1px rgba(0,0,0,0.3);
	box-shadow: 10px 10px 11px 1px rgba(0,0,0,0.3);
}

.light-blue-wrap {
	margin-bottom:20px;
	padding-bottom:20px;
	background-color: #bbd3d7;
	-webkit-border-radius: 20px;
	-webkit-border-top-right-radius: 0;
	-moz-border-radius: 20px;
	-moz-border-radius-topright: 0;
	border-radius: 20px;
	border-top-right-radius: 0;
	-webkit-box-shadow: 7px 7px 6px 1px rgba(0,0,0,0.3);
	-moz-box-shadow: 7px 7px 6px 1px rgba(0,0,0,0.3);
	box-shadow: 7px 7px 6px 1px rgba(0,0,0,0.3);
}



/* FCF Theme for Modal */

.fcf-theme-modal .modal-dialog {
	background-color:#1f6b8d;
	padding: 10px 15px;
	-webkit-border-radius: 20px;
	-webkit-border-top-right-radius: 0;
	-moz-border-radius: 20px;
	-moz-border-radius-topright: 0;
	border-radius: 20px;
	border-top-right-radius: 0;
	-webkit-box-shadow: 10px 10px 11px 1px rgba(0,0,0,0.3);
	-moz-box-shadow: 10px 10px 11px 1px rgba(0,0,0,0.3);
	box-shadow: 10px 10px 11px 1px rgba(0,0,0,0.3);
}

.fcf-theme-modal .modal-content {
	background-color: transparent;
    box-shadow: none;
    border: none;
}

.fcf-theme-modal .modal-header {
	border-bottom: none !important;
	color: #fff;
	background-color:transparent;
}

.fcf-theme-modal .modal-body {
	margin-bottom:20px;
	padding-bottom:20px;
	background-color: #bbd3d7;
	-webkit-border-radius: 20px;
	-webkit-border-top-right-radius: 0;
	-moz-border-radius: 20px;
	-moz-border-radius-topright: 0;
	border-radius: 20px;
	border-top-right-radius: 0;
	-webkit-box-shadow: 7px 7px 6px 1px rgba(0,0,0,0.3);
	-moz-box-shadow: 7px 7px 6px 1px rgba(0,0,0,0.3);
	box-shadow: 7px 7px 6px 1px rgba(0,0,0,0.3);
}

@media (max-width: 676px) {

#landing {
	width:600px;
}

}

@media (max-width: 767px) {



 }

@media (max-width: 979px) {


}

 @media (min-width: 768px) and (max-width: 979px) {

	#landing {
		width:700px;
	}
 }

/* Fix left gap */
.col-xs-2 {
    padding-left: 0px !important;
}

.op-stage-masthead {
    background-color:#F0F0F0;
}

.op-stage-masthead h2 {
    padding-left: 20px;
    color: #666666 !important;
}

.sidr .op-list {
	border-radius: 0px !important;
}
.op-list {
    background-color: #bbd3d7;
    color: #000;
    border-radius: 20px 0px 20px 20px;
}

.op-widget {
    background-color: #3C766A;
    border-right: none;
}

.op-widget h3, .op-widget p {
    color: #FFF !important;
}

.op-block h1, .op-block h2, .op-block h3, .op-block h4, .op-block h5 {
    color:#eee;
}

.op-block
{
    background-color: #1F6B8D;
    color:#eee;
    border-radius: 20px 0px 20px 20px;
}

.workspace > .op-block-border {
    padding: 10px;
    border-radius: 20px 0px 0px 0px;
}

.op-block-border, .workspace > .op-block {
    background-color:#BBD3D7 !important;
    border-radius: 20px 0px 20px 20px;
    border: none;
}

.op-widget-body {
    background-color: #bbd3d7;
    color: #000;
    border-radius: 20px 0px 20px 20px;
}

.tr-translate-body {
    background: #bbd3d7 !important;
    border-radius: 20px 0px 20px 20px;
}
.tr-translate-body .op-widget-body {
	background: transparent;
}

#op-list-menu {
    background-color: #444 !important;
}

.opsportal-content-area {
    background-color: #1F6B8D;
    border-radius: 20px 0px 20px 20px;
	margin-top: 10px;
}

.opsportal-content-area > p {
    color:#eee;
    padding: 10px;
}

.op-block-border > .op-container {
    padding: 10px;
}

#opsportal-description .op-container {
	padding-left: 0;
}

.rp-instructionsPanel p {
	color: #eee !important;
}

